Updated a bunch of stuff
